be/infra/k8s/employee-depl-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: florist-be-employee-depl-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-dev
  template:
    metadata:
      labels:
        app: employee-dev
    spec:
      containers:
        - name: employee-dev
          image: florist-be-employee-img-dev
          ports:
            - containerPort: 7030
---
apiVersion: v1
kind: Service
metadata:
  name: florist-be-employee-svc-dev
spec:
  selector:
    app: employee-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7030
