be/infra/k8s/products-depl-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: florist-be-products-depl-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-dev
  template:
    metadata:
      labels:
        app: products-dev
    spec:
      containers:
        - name: products-dev
          image: florist-be-products-img-dev
          ports:
            - containerPort: 7020
---
apiVersion: v1
kind: Service
metadata:
  name: florist-be-products-svc-dev
spec:
  selector:
    app: products-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7020
