be/infra/k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: florist-be-products-svc-dev
                port: 
                  number: 80
